# Scratch

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
.run/: Table test.run.xml  Unnamed.run.xml  string test.run.xml
Assets/Shaders/: Basic.shader  Glass.shader  Outline.shader  PointShadowMap.shader  Skybox.shader
Resources/Shaders/: Basic.shader  BasicLight.shader  BasicShaded.shader  BasicShadedInstanced.shader  DIrectionalShadowMap.shader  Mirror.shader  Normals.shader  PointShadowMap.shader  PostProcess.shader  Skybox.shader
Source/: main.cpp  test_shadowmaps.cpp  test_shadowmaps.h  windows_entry.cpp
Source/Application/: app_message.h  application.cpp  application.h
Source/Application/Input/: input.h  input_state.h  input_types.h
Source/Application/Platform/: filesystem.h  filesystem_types.h  platform.h  utils.h  window.h  window_types.h
Source/Application/Platform/Windows/: glfw_keykodes_table.h  platform_windows.cpp  platform_windows.h  utils_windows.cpp  utils_windows.h  window_windows.cpp  window_windows.h  windows_filesystem.cpp  windows_filesystem.h  windows_platform.cpp  windows_platform.h  windows_window.cpp  windows_window.h
Source/Asset/: asset_info.cpp  asset_info.h  asset_storage.h
Source/Asset/Json/: json_serialization.h
Source/Asset/Model/: mesh.cpp  mesh.h  model.cpp  model.h
Source/Asset/Shader/: shader.cpp  shader.h
Source/Asset/Texture/: texture.cpp  texture.h
Source/Core/: app.cpp  app.h  atom.cpp  atom.h  basic.h  core.h  core_types.h  core_utility.h  hash.h  owned.h  random.h  ref.h  scratch.natvis
Source/Core/Concurrency/: ConcurrentMap.h  concurrent_hash_table.h  spinlock.h
Source/Core/Containers/: algo.h  array.h  array_iter.h  concurrent_hash_table.h  containers.natvis  dyn_array.h  hash_table.h  rb_set.h  span.h  str.h  tag.cpp  tag.h
Source/Core/Hash/: hash.h
Source/Core/Logger/: logger.cpp  logger.h
Source/Core/Logs/: logs.cpp  logs.h
Source/Core/Math/: math.cpp  math.h  vec.h
Source/Core/Memory/: allocator_base.h  memory.h  tree_allocator.cpp  tree_allocator.h
Source/Core/Ownership/: owned.h
Source/Core/Reflection/: reflection.h
Source/Core/String/: atom.cpp  atom.h  format_argument.cpp  format_argument.h  str.h  str_conversions.cpp  str_conversions.h  str_format.cpp  str_format.h  str_util.cpp  str_util.h
Source/Core/Templates/: concepts.h  equals.h  key_value_pair.h  less.h  result.h  traits.h
Source/Core/Time/: timer.h  timestamp.cpp  timestamp.h
Source/Core/Utility/: random.h  ref.h
Source/Game/: game.cpp  game.h  world.h
Source/Game/Entities/: camera.h  light.cpp  light.h  model_instance.h  phong_material.h
Source/Platform/Win32/: win32_window.cpp
Source/Rendering/: Texture.cpp  bind_constants.h  cubemap.cpp  cubemap.h  element_buffer.cpp  element_buffer.h  framebuffer.cpp  framebuffer.h  index_buffer.cpp  index_buffer.h  renderer.cpp  renderer.h  rendering_context.cpp  rendering_context.h  rendering_types.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.cpp  vertex_buffer_layout.h  view.h
Source/Rendering/Backend/: dynamic_rhi.cpp  dynamic_rhi.h
Source/Rendering/Backend/OpenGL/: opengl_rhi.cpp  opengl_rhi.h
Source/Rendering/OldRender/: cubemap.cpp  cubemap.h  element_buffer.cpp  framebuffer.cpp  framebuffer.h  index_buffer.h  old_rebderer.h  renderer.cpp  renderer.h  shader.cpp  vertex.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
Source/Rendering/RHI/: dynamic_rhi.h
Source/Resource/: resource.h  resource_storage.cpp  resource_storage.h
Source/SceneObjects/: camera.cpp  camera.h  light.cpp  light.h  mesh.cpp  mesh.h  model.cpp  model.h  model_instance.h  phong_material.h
Source/TestScenes/: TestClearColor.cpp  TestScene.cpp  test_3d_texture.cpp  test_3d_texture.h  test_basic_light.cpp  test_basic_light.h  test_clear_color.cpp  test_clear_color.h  test_cube.cpp  test_cube.h  test_cubemap.cpp  test_cubemap.h  test_instancing.cpp  test_instancing.h  test_model.cpp  test_model.h  test_normal_maps.cpp  test_normal_maps.h  test_scene.cpp  test_scene.h  test_shadowmaps.cpp  test_shadowmaps.h  test_texture.cpp  test_texture.h
Source/UI/: ui.cpp  ui.h  ui_data.cpp  ui_data.h
Source/Utils/: glfw.h
Testing/: CMakeLists.txt  testing_shared.h
Testing/Allocator/: CMakeLists.txt  allocator_test.cpp
Testing/Array/: CMakeLists.txt  array_test.cpp
Testing/ConcurrentHashTable/: CMakeLists.txt  ContestTest.cpp  concurrent_table_test.cpp
Testing/Json/: CMakeLists.txt  json_test.cpp
Testing/Set/: CMakeLists.txt  set_test.cpp
Testing/String/: CMakeLists.txt  string_test.cpp
Testing/Table/: CMakeLists.txt  table_test.cpp
Testing/Tree/: CMakeLists.txt  tree_test.cpp
